# job-scraper

./: .gitignore  Makefile  README.md  jobs_ca.csv  jobs_fr.csv  jobs_indeed.py  jobs_ma.csv  pyproject.toml
job_scraper/: Linkedin Scraper.ipynb  voov.py
