[tool.poetry]
name = "Job-Scraper"
version = "0.1.0"
description = ""
authors = ["zzak00 <abderrazzak.bajjou@um6p.ma>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
requests = "^2.28.1"
bs4 = "^0.0.1"
pandas = "^1.5.0"
telepot = "^12.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
